// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-pagination Arrows disabled 1`] = `
<nav
  aria-labelledby="ebay-pagination-pagination-heading"
  className="pagination"
  role="navigation"
>
  <span
    aria-live="polite"
    role="status"
  >
    <h2
      className="clipped"
      id="ebay-pagination-pagination-heading"
    >
      Pagination - Current Page
    </h2>
  </span>
  <a
    aria-disabled="true"
    aria-label="Previous page"
    className="icon-link pagination__previous"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-left-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-left-16"
      />
    </svg>
  </a>
  <ol
    className="pagination__items"
  >
    <li
      hidden={false}
    >
      <a
        aria-current="page"
        className="pagination__item"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
  </ol>
  <a
    aria-disabled="true"
    aria-label="Next page"
    className="icon-link pagination__next"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-right-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-right-16"
      />
    </svg>
  </a>
</nav>
`;

exports[`Storyshots ebay-pagination Basic links 1`] = `
<nav
  aria-labelledby="ebay-pagination-pagination-heading"
  className="pagination"
  role="navigation"
>
  <span
    aria-live="polite"
    role="status"
  >
    <h2
      className="clipped"
      id="ebay-pagination-pagination-heading"
    >
      Results Pagination - Page 1
    </h2>
  </span>
  <a
    aria-disabled="true"
    aria-label="Previous page"
    className="icon-link pagination__previous"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-left-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-left-16"
      />
    </svg>
  </a>
  <ol
    className="pagination__items"
  >
    <li
      hidden={false}
    >
      <a
        aria-current="page"
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=1"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=2"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=3"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=4"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=5"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=6"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=7"
        onClick={[Function]}
      >
        7
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=8"
        onClick={[Function]}
      >
        8
      </a>
    </li>
    <li
      hidden={false}
    >
      <a
        className="pagination__item"
        href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=9"
        onClick={[Function]}
      >
        9
      </a>
    </li>
  </ol>
  <a
    aria-label="Next page"
    className="icon-link pagination__next"
    href="https://www.ebay.com/sch/i.html?_from=R40&_nkw=iphone&_sacat=0&_pgn=10"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-right-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-right-16"
      />
    </svg>
  </a>
</nav>
`;

exports[`Storyshots ebay-pagination Buttons 1`] = `
<nav
  aria-labelledby="ebay-pagination-pagination-heading"
  className="pagination"
  role="navigation"
>
  <span
    aria-live="polite"
    role="status"
  >
    <h2
      className="clipped"
      id="ebay-pagination-pagination-heading"
    >
      Pagination - Current Page
    </h2>
  </span>
  <button
    aria-label="Previous page"
    className="icon-btn pagination__previous"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-left-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-left-16"
      />
    </svg>
  </button>
  <ol
    className="pagination__items"
  >
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        aria-current="page"
        className="pagination__item"
        onClick={[Function]}
      >
        2
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        3
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        4
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        5
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        6
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        7
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        8
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        9
      </button>
    </li>
  </ol>
  <button
    aria-label="Next page"
    className="icon-btn pagination__next"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-right-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-right-16"
      />
    </svg>
  </button>
</nav>
`;

exports[`Storyshots ebay-pagination Buttons interactive (click to change active page) 1`] = `
Array [
  <div>
    <nav
      aria-labelledby="ebay-pagination-pagination-heading"
      className="pagination"
      role="navigation"
    >
      <span
        aria-live="polite"
        role="status"
      >
        <h2
          className="clipped"
          id="ebay-pagination-pagination-heading"
        >
          Results Pagination - Page 1
        </h2>
      </span>
      <button
        aria-disabled="true"
        aria-label="Previous page"
        className="icon-btn pagination__previous"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-left-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-left-16"
          />
        </svg>
      </button>
      <ol
        className="pagination__items"
      >
        <li
          hidden={false}
        >
          <button
            aria-current="page"
            className="pagination__item"
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            3
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            4
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            5
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            6
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            7
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            8
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            9
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            10
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            11
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            12
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            13
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            14
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            15
          </button>
        </li>
      </ol>
      <button
        aria-label="Next page"
        className="icon-btn pagination__next"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-right-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-right-16"
          />
        </svg>
      </button>
    </nav>
  </div>,
  <div>
    <nav
      aria-labelledby="ebay-pagination-pagination-heading"
      className="pagination"
      role="navigation"
    >
      <span
        aria-live="polite"
        role="status"
      >
        <h2
          className="clipped"
          id="ebay-pagination-pagination-heading"
        >
          Results Pagination - Page 6
        </h2>
      </span>
      <button
        aria-disabled="true"
        aria-label="Previous page"
        className="icon-btn pagination__previous"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-left-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-left-16"
          />
        </svg>
      </button>
      <ol
        className="pagination__items"
      >
        <li
          hidden={false}
        >
          <button
            aria-current="page"
            className="pagination__item"
            onClick={[Function]}
          >
            6
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            7
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            8
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            9
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            onClick={[Function]}
          >
            10
          </button>
        </li>
      </ol>
      <button
        aria-label="Next page"
        className="icon-btn pagination__next"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-right-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-right-16"
          />
        </svg>
      </button>
    </nav>
  </div>,
]
`;

exports[`Storyshots ebay-pagination Fluid 1`] = `
Array [
  <h2>
    Default fluid
  </h2>,
  <nav
    aria-labelledby="ebay-pagination-pagination-heading"
    className="pagination pagination--fluid"
    role="navigation"
  >
    <span
      aria-live="polite"
      role="status"
    >
      <h2
        className="clipped"
        id="ebay-pagination-pagination-heading"
      >
        Pagination - Current Page
      </h2>
    </span>
    <button
      aria-label="Previous page"
      className="icon-btn pagination__previous"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="icon icon--arrow-left-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-arrow-left-16"
        />
      </svg>
    </button>
    <ol
      className="pagination__items"
    >
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          aria-current="page"
          className="pagination__item"
          onClick={[Function]}
        >
          2
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          3
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          4
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          5
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          6
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          7
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          8
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          9
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          10
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          11
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          12
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          13
        </button>
      </li>
    </ol>
    <button
      aria-label="Next page"
      className="icon-btn pagination__next"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="icon icon--arrow-right-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-arrow-right-16"
        />
      </svg>
    </button>
  </nav>,
  <h2>
    Fluid with dots
  </h2>,
  <nav
    aria-labelledby="ebay-pagination-pagination-heading"
    className="pagination pagination--fluid"
    role="navigation"
  >
    <span
      aria-live="polite"
      role="status"
    >
      <h2
        className="clipped"
        id="ebay-pagination-pagination-heading"
      >
        Pagination - Current Page
      </h2>
    </span>
    <button
      aria-label="Previous page"
      className="icon-btn pagination__previous"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="icon icon--arrow-left-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-arrow-left-16"
        />
      </svg>
    </button>
    <ol
      className="pagination__items"
    >
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          aria-current="page"
          className="pagination__item"
          onClick={[Function]}
        >
          2
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          3
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          4
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          5
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          6
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          7
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          8
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          9
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          10
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          11
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          12
        </button>
      </li>
      <li
        hidden={false}
      >
        <button
          className="pagination__item"
          onClick={[Function]}
        >
          13
        </button>
      </li>
    </ol>
    <button
      aria-label="Next page"
      className="icon-btn pagination__next"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="icon icon--arrow-right-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-arrow-right-16"
        />
      </svg>
    </button>
  </nav>,
]
`;

exports[`Storyshots ebay-pagination Inside a dialog 1`] = `
Array [
  <button
    aria-live={null}
    className="btn btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    Show pagination dialog
  </button>,
  <div
    onScrollCapture={[Function]}
    onTouchMoveCapture={[Function]}
    onWheelCapture={[Function]}
  >
    <div
      aria-labelledby="dialog-title-"
      arial-modal="true"
      className="lightbox-dialog lightbox-dialog--mask-fade"
      hidden={true}
      onKeyDown={[Function]}
      role="dialog"
    >
      <div
        className="lightbox-dialog__window lightbox-dialog__window--fade"
      >
        <div
          className="lightbox-dialog__main"
        >
          <nav
            aria-labelledby="ebay-pagination-pagination-heading"
            className="pagination"
            role="navigation"
          >
            <span
              aria-live="polite"
              role="status"
            >
              <h2
                className="clipped"
                id="ebay-pagination-pagination-heading"
              >
                Results Pagination - Page 1
              </h2>
            </span>
            <button
              aria-disabled="true"
              aria-label="Previous page"
              className="icon-btn pagination__previous"
              onClick={[Function]}
            >
              <svg
                aria-hidden={true}
                className="icon icon--arrow-left-16"
                focusable={false}
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlinkHref="#icon-arrow-left-16"
                />
              </svg>
            </button>
            <ol
              className="pagination__items"
            >
              <li
                hidden={false}
              >
                <button
                  aria-current="page"
                  className="pagination__item"
                  onClick={[Function]}
                >
                  1
                </button>
              </li>
              <li
                hidden={false}
              >
                <button
                  className="pagination__item"
                  onClick={[Function]}
                >
                  2
                </button>
              </li>
              <li
                hidden={false}
              >
                <button
                  className="pagination__item"
                  onClick={[Function]}
                >
                  3
                </button>
              </li>
              <li
                hidden={false}
              >
                <button
                  className="pagination__item"
                  onClick={[Function]}
                >
                  4
                </button>
              </li>
              <li
                hidden={false}
              >
                <button
                  className="pagination__item"
                  onClick={[Function]}
                >
                  5
                </button>
              </li>
            </ol>
            <button
              aria-label="Next page"
              className="icon-btn pagination__next"
              onClick={[Function]}
            >
              <svg
                aria-hidden={true}
                className="icon icon--arrow-right-16"
                focusable={false}
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlinkHref="#icon-arrow-right-16"
                />
              </svg>
            </button>
          </nav>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots ebay-pagination Variant \`overflow\` (interactive) 1`] = `
Array [
  <div>
    <nav
      aria-labelledby="ebay-pagination-pagination-heading"
      className="pagination"
      role="navigation"
    >
      <span
        aria-live="polite"
        role="status"
      >
        <h2
          className="clipped"
          id="ebay-pagination-pagination-heading"
        >
          Results Pagination - Page 1
        </h2>
      </span>
      <button
        aria-disabled="true"
        aria-label="Previous page"
        className="icon-btn pagination__previous"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-left-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-left-16"
          />
        </svg>
      </button>
      <ol
        className="pagination__items"
      >
        <li
          hidden={false}
        >
          <button
            aria-current="page"
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            3
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            4
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            5
          </button>
        </li>
      </ol>
      <button
        aria-label="Next page"
        className="icon-btn pagination__next"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-right-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-right-16"
          />
        </svg>
      </button>
    </nav>
  </div>,
  <div>
    <nav
      aria-labelledby="ebay-pagination-pagination-heading"
      className="pagination"
      role="navigation"
    >
      <span
        aria-live="polite"
        role="status"
      >
        <h2
          className="clipped"
          id="ebay-pagination-pagination-heading"
        >
          Results Pagination - Page 1
        </h2>
      </span>
      <button
        aria-disabled="true"
        aria-label="Previous page"
        className="icon-btn pagination__previous"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-left-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-left-16"
          />
        </svg>
      </button>
      <ol
        className="pagination__items"
      >
        <li
          hidden={false}
        >
          <button
            aria-current="page"
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            3
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            4
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            5
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            6
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            7
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            8
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            9
          </button>
        </li>
      </ol>
      <button
        aria-label="Next page"
        className="icon-btn pagination__next"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-right-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-right-16"
          />
        </svg>
      </button>
    </nav>
  </div>,
  <div>
    <nav
      aria-labelledby="ebay-pagination-pagination-heading"
      className="pagination"
      role="navigation"
    >
      <span
        aria-live="polite"
        role="status"
      >
        <h2
          className="clipped"
          id="ebay-pagination-pagination-heading"
        >
          Results Pagination - Page 1
        </h2>
      </span>
      <button
        aria-disabled="true"
        aria-label="Previous page"
        className="icon-btn pagination__previous"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-left-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-left-16"
          />
        </svg>
      </button>
      <ol
        className="pagination__items"
      >
        <li
          hidden={false}
        >
          <button
            aria-current="page"
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            3
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            4
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            5
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            6
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            7
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            8
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            9
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            10
          </button>
        </li>
      </ol>
      <button
        aria-label="Next page"
        className="icon-btn pagination__next"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-right-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-right-16"
          />
        </svg>
      </button>
    </nav>
  </div>,
  <div>
    <nav
      aria-labelledby="ebay-pagination-pagination-heading"
      className="pagination"
      role="navigation"
    >
      <span
        aria-live="polite"
        role="status"
      >
        <h2
          className="clipped"
          id="ebay-pagination-pagination-heading"
        >
          Results Pagination - Page 1
        </h2>
      </span>
      <button
        aria-disabled="true"
        aria-label="Previous page"
        className="icon-btn pagination__previous"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-left-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-left-16"
          />
        </svg>
      </button>
      <ol
        className="pagination__items"
      >
        <li
          hidden={false}
        >
          <button
            aria-current="page"
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            2
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            3
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            4
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            5
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            6
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            7
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            8
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            9
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            10
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            11
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            12
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            13
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            14
          </button>
        </li>
        <li
          hidden={false}
        >
          <button
            className="pagination__item"
            href=""
            onClick={[Function]}
          >
            15
          </button>
        </li>
      </ol>
      <button
        aria-label="Next page"
        className="icon-btn pagination__next"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="icon icon--arrow-right-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-arrow-right-16"
          />
        </svg>
      </button>
    </nav>
  </div>,
]
`;

exports[`Storyshots ebay-pagination Variant \`showLast\` (interactive) 1`] = `
<nav
  aria-labelledby="ebay-pagination-pagination-heading"
  className="pagination"
  role="navigation"
>
  <span
    aria-live="polite"
    role="status"
  >
    <h2
      className="clipped"
      id="ebay-pagination-pagination-heading"
    >
      Results Pagination - Page 1
    </h2>
  </span>
  <button
    aria-disabled="true"
    aria-label="Previous page"
    className="icon-btn pagination__previous"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-left-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-left-16"
      />
    </svg>
  </button>
  <ol
    className="pagination__items"
  >
    <li
      hidden={false}
    >
      <button
        aria-current="page"
        className="pagination__item"
        onClick={[Function]}
      >
        1
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        2
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        3
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        4
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        5
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        6
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        7
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        8
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        9
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        10
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        11
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        12
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        13
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        14
      </button>
    </li>
    <li
      hidden={false}
    >
      <button
        className="pagination__item"
        onClick={[Function]}
      >
        15
      </button>
    </li>
  </ol>
  <button
    aria-label="Next page"
    className="icon-btn pagination__next"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon icon--arrow-right-16"
      focusable={false}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlinkHref="#icon-arrow-right-16"
      />
    </svg>
  </button>
</nav>
`;
